update symbol 2D tool

--- a/puzzle_2d_symbol_generator/ui/Symbols_2D_Generator_MainUI.ui
+++ b/puzzle_2d_symbol_generator/ui/Symbols_2D_Generator_MainUI.ui
@@ -59,6 +59,20 @@ color: rgb(85, 0, 0);</string>
            <item row="3" column="1">
             <layout class="QVBoxLayout" name="verticalLayout">
              <item>
+              <widget class="QPushButton" name="btnDownloadFromGoogle">
+               <property name="minimumSize">
+                <size>
+                 <width>50</width>
+                 <height>50</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Download ref
+ from Google</string>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="QPushButton" name="btnAutoTag">
                <property name="minimumSize">
                 <size>
@@ -87,10 +101,24 @@ color: rgb(85, 0, 0);</string>
             </layout>
            </item>
            <item row="3" column="0">
-            <widget class="QListWidget" name="lstDataset"/>
+            <widget class="QListWidget" name="lstDataset">
+             <property name="styleSheet">
+              <string notr="true"/>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::Shape::Panel</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Shadow::Plain</enum>
+             </property>
+            </widget>
            </item>
            <item row="0" column="0">
-            <widget class="QComboBox" name="cbbDatasetType"/>
+            <widget class="QComboBox" name="cbbDatasetType">
+             <property name="styleSheet">
+              <string notr="true"/>
+             </property>
+            </widget>
            </item>
            <item row="1" column="1">
             <widget class="QPushButton" name="btnFilter">
@@ -114,7 +142,26 @@ color: rgb(85, 0, 0);</string>
            </item>
            <item row="1" column="0">
             <widget class="QWidget" name="widgetTagArea" native="true">
-             <layout class="QVBoxLayout" name="verticalLayout_2"/>
+             <property name="styleSheet">
+              <string notr="true"/>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_2">
+              <property name="spacing">
+               <number>0</number>
+              </property>
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+             </layout>
             </widget>
            </item>
           </layout>
